env-setup/k8s-deployment/carmarketplace-k8s-namespace-dev.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: carmarketplace-dev
  labels:
    name: development
